--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Todo list</title>
+    <title>To-Do list</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700,900&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1 class="title">My Todo list</h1>
+    <h1 class="title">My To-Do list</h1>
 
     <div class="all-tasks">
       <h2 class="task-list-title">My lists</h2>
